--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,11 @@ body {
   min-height: 100%;
   padding-bottom: 5rem;
 }
-h1, h2  {
+h1, h2, h3 {
   color: white;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
   text-align: center;
-
-  text-transform: uppercase;
-
   font-family: 'Staatliches', cursive;
-  letter-spacing: 1px;
 }
 .lista-citas .media {
   border-bottom: 1px solid #e1e1e1;
@@ -44,7 +40,7 @@ label {
 input[type="date"],
 input[type="time"] {
   height: 38px;
-    padding: 6px 10px;
+    padding: 3px 6px;
     background-color: #fff;
     border: 1px solid #D1D1D1;
     border-radius: 4px;
@@ -53,7 +49,7 @@ input[type="time"] {
 }
 
 .cita {
-  padding: 2rem;
+  padding: 1rem;
   background: white;
   border-bottom: 1px solid #e1e1e1;
   color: black;
